--- a/bubble.html
+++ b/bubble.html
@@ -33,6 +33,18 @@
             }
         }
         console.log("arr1: " + arr1);
+
+        var arr2 = [4, 1, 5, 3, 2];
+        for (var i = 1; i <= arr2.length - 1; i++) {
+            for (var j = 0; j < arr2.length - i; j++) {
+                if (arr2[j] > arr2[j + 1]) {
+                    var temp = arr2[j];
+                    arr2[j] = arr2[j + 1];
+                    arr2[j + 1] = temp;
+                }
+            }
+        }
+        console.log(arr2);
     </script>
 </head>
 
