--- a/star.html
+++ b/star.html
@@ -16,7 +16,7 @@
     //     str = str + '\n'
     // }
     // console.log(str);
-
+    //倒三角
     var str = '';
     for (var i = 1; i <= 10; i++) {
         for (var j = 10; j >= i; j--) {
@@ -24,6 +24,7 @@
         }
         str = str + '\n'
     }
+    // document.write(str);
     console.log(str);
 </script>
 
