--- a/web API/A roll call by click button.html
+++ b/web API/A roll call by click button.html
@@ -30,7 +30,7 @@
             return Math.floor(Math.random() * (max - min + 1)) + min
         }
         //声明数组
-        let arr = ['赵云', '黄忠', '关羽', '张飞', '马超', '刘备', '曹操', 'Pink']
+        let arr = ['赵云', '刘备', '曹操', 'Pink']
 
         // 开始点击事件
         btn.addEventListener('click', function() {
