done 还是随机点名的按钮 只不过是setInterval版本

--- a/web API/A roll call by click button.html
+++ b/web API/A roll call by click button.html
@@ -46,6 +46,7 @@
 
             //如果数组没有了 长度为0 就要禁用按钮
             if (arr.length === 0) {
+                // console.log(arr);
                 btn.disabled = true
                 btn.innerHTML = '已经抽完了'
             }
