--- a/web API/randomquestions.html
+++ b/web API/randomquestions.html
@@ -63,7 +63,8 @@
         let start = document.querySelector('.start')
         let end = document.querySelector('.end')
         let qs = document.querySelector('.qs')
-        let timer = 0 //开始按钮用，结束按钮用 所以需要声明一个全局变量
+
+        let timer = 0 //😄开始按钮用，结束按钮用 所以需要声明一个全局变量
         let random = 0
 
         //2.给开始按钮注册事件
@@ -82,7 +83,7 @@
         //3.给结束按钮注册事件 本质是停止定时器
         end.addEventListener('click', function() {
             clearInterval(timer)
-                //删除数组元素
+                //删除数组元素 删除抽过的元素
             arr.splice(random, 1) //😄random时开始按钮的局部变量，别忘了改成全局变量，所以结束按钮也可以使用了
         })
     </script>
