Mi search bar done

--- a/9times9.html
+++ b/9times9.html
@@ -13,11 +13,11 @@
         for (var j = 1; j <= i; j++) {
             // str = str + '⭐'
             //str+='⭐'
-            //1*2 = 2 2*2 =4
+            //1*2 = 2 2*2 =4 
             str += j + '*' +
                 i + '=' +
                 i * j + '\t';
-            //每一个后边换行 '\t'
+            //每一个后边换行 是'\t'
         }
         str += '\n'
     }
