--- a/read article count down.html
+++ b/read article count down.html
@@ -21,7 +21,7 @@
 
         //倒计时从6开始
         let i = 6
-            // 开始定时器
+            // 开始定时器了
         let timer = setInterval(function() {
             i--
             btn.innerHTML = `我已经阅读用户协议(${i})`
