--- a/Get current date.html
+++ b/Get current date.html
@@ -56,7 +56,7 @@
 
 
         setInterval(function() {
-            //实例化事件对象
+            //实例化事件对象 done
             let date = new Date()
 
             let year = date.getFullYear()
