--- a/web API/购物车案例/car.html
+++ b/web API/购物车案例/car.html
@@ -315,7 +315,7 @@
         //4.计算总计 所有的totals相加 
         function result() {
             // 😊别忘了赋值变量
-            //6. 原先 totals 和inputs 是写在外边的，当点击删除之后要重新获取小计和删除的数量
+            //6. 原先 totals 和inputs 是写在外边的，当点击删除之后要重新获取小计和删除的数量 要不然总的删除没有变化
             let totals = document.querySelectorAll('.total')
             let inputs = document.querySelectorAll('.count-c input')
 
