--- a/web API/A roll call by click button.html
+++ b/web API/A roll call by click button.html
@@ -22,8 +22,8 @@
     <button>点击</button>
 
     <script>
-        let box = document.querySelector('div')
-        let btn = document.querySelector('button')
+        let box = document.querySelector('div');
+        let btn = document.querySelector('button');
 
         //随机函数 c+v
         function getRandom(min, max) {
