--- a/9times9.html
+++ b/9times9.html
@@ -20,7 +20,7 @@
             //每一个后边换行 是'\t'
         }
         //换行
-        str += '\n'
+        str += '\n';
     }
     console.log(str);
 </script>
