--- a/make a roll call.html
+++ b/make a roll call.html
@@ -23,7 +23,7 @@
     抽中的选手:
     <div></div>
     <script>
-        let box = document.querySelector('div')
+        let box = document.querySelector('div');
 
         function getRandom(min, max) {
             return Math.floor(Math.random() * (max - min + 1)) + min
