--- a/all checked button.html
+++ b/all checked button.html
@@ -98,7 +98,7 @@
         </table>
     </div>
     <script>
-        var j_cbAll = document.getElementById('j_cbAll');
+        var j_cbAll = document.getElementById("j_cbAll");
         var j_tbs = document.getElementById('j_tb').getElementsByTagName('input');
         j_cbAll.onclick = function() {
             for (var i = 0; i < j_tbs.length; i++) {
