--- a/9times9.html
+++ b/9times9.html
@@ -8,7 +8,7 @@
     <title>9times9</title>
 </head>
 <script>
-    var str = '';
+    var str = "";
     for (var i = 1; i <= 9; i++) {
         for (var j = 1; j <= i; j++) {
             // str = str + '⭐'
