--- a/Fizz.html
+++ b/Fizz.html
@@ -10,45 +10,45 @@
 
 <body>
     <script>
-        // for (let num = 1; num <= 100; num++) {
-        //     if (num % 3 === 0 && num % 5 !== 0) {
-        //         console.log("Fizz");
-        //     } else if (num % 5 === 0 && num % 3 !== 0) {
-        //         console.log("Buzz");
-        //     } else if (num % 3 === 0 && num % 5 === 0) {
-        //         console.log("FizzBuzz");
-        //     } else {
-        //         console.log(num);
-        //     }
-        // }
+        for (let num = 1; num <= 100; num++) {
+            if (num % 3 === 0 && num % 5 !== 0) {
+                console.log("Fizz");
+            } else if (num % 5 === 0 && num % 3 !== 0) {
+                console.log("Buzz");
+            } else if (num % 3 === 0 && num % 5 === 0) {
+                console.log("FizzBuzz");
+            } else {
+                console.log(num);
+            }
+        }
 
 
-        // for (let num = 1; num <= 100; num++) {
-        //     if (num % 3 === 0 && num % 5 === 0) {
-        //         console.log("FizzBuzz");
-        //     } else if (num % 5 === 0) {
-        //         console.log("Buzz");
-        //     } else if (num % 3 === 0) {
-        //         console.log("Fizz");
-        //     } else {
-        //         console.log(num);
-        //     }
-        // }
+        for (let num = 1; num <= 100; num++) {
+            if (num % 3 === 0 && num % 5 === 0) {
+                console.log("FizzBuzz");
+            } else if (num % 5 === 0) {
+                console.log("Buzz");
+            } else if (num % 3 === 0) {
+                console.log("Fizz");
+            } else {
+                console.log(num);
+            }
+        }
 
 
-        // for (let num = 1; num <= 100; num++) {
-        //     if (num % 3 === 0) {
-        //         if (num % 5 === 0) {
-        //             console.log("FizzBuzz");
-        //         } else {
-        //             console.log("Fizz");
-        //         }
-        //     } else if (num % 5 === 0) {
-        //         console.log("Buzz");
-        //     } else {
-        //         console.log(num);
-        //     }
-        // }
+        for (let num = 1; num <= 100; num++) {
+            if (num % 3 === 0) {
+                if (num % 5 === 0) {
+                    console.log("FizzBuzz");
+                } else {
+                    console.log("Fizz");
+                }
+            } else if (num % 5 === 0) {
+                console.log("Buzz");
+            } else {
+                console.log(num);
+            }
+        }
     </script>
 </body>
 
