--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -21,7 +21,7 @@
         <!-- Show players who's next -->
         <section class="display">
             player
-            <span class="display-player playerx">X</span>' turn
+            <span class="display-player playerx">X</span>'s turn
         </section>
         <!-- game grid -->
         <div class="container">
