--- a/snake/index.html
+++ b/snake/index.html
@@ -15,8 +15,8 @@
 <body>
     <div id="gameContainer">
         <!-- Set the width and height right away, do not need the px!!!! -->
-        <canvas id="gameboard" width="500" height="500"></canvas>
-        <div id="score">0</div>
+        <canvas id="gameBoard" width="500" height="500"></canvas>
+        <div id="scoreText">0</div>
         <button id="startBtn">Start</button>
         <button id="endBtn">Finish</button>
     </div>
