--- a/snake/index.html
+++ b/snake/index.html
@@ -18,7 +18,7 @@
         <canvas id="gameBoard" width="500" height="500"></canvas>
         <div id="scoreText">0</div>
         <button id="startBtn">Start</button>
-        <button id="endBtn">Finish</button>
+        <button id="resetBtn">Restart</button>
     </div>
 
     <script src="./app.js"></script>
