--- a/snake/index.html
+++ b/snake/index.html
@@ -21,7 +21,8 @@
         <button id="resetBtn">Restart</button>
     </div>
 
-    <script src="./app.js"></script>
+    <!-- <script src="./app.js"></script> -->
+    <script src="./app2.js"></script>
 </body>
 
 </html>
