--- a/Break out/index.html
+++ b/Break out/index.html
@@ -13,6 +13,7 @@
     <canvas id="breakOut" width="400" height="500">
         
     </canvas>
+    <script src="./component.js"></script>
     <script src="./app.js"></script>
 </body>
 
